--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "incremental": true,
     
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "baseUrl": "./",
   }
 }
